core/templates/dev/head/css/oppia.css
/* ... */
.btn-lg, .btn-group-lg > .btn {
  border-radius: 6px;
  font-size: 18px;
  line-height: 1.3333333;
  padding: 10px 16px;
}
.btn-group > .btn + .dropdown-toggle {
  padding: 6px 6px 6px 3px;
}
.btn.oppia-navbar-button {
  background-color: rgba(0,0,0,0.2);
  border-radius: 4px;
  color: rgba(255,255,255,1.0);
  font-family: "Capriola", "Roboto", Arial, sans-serif;
  font-size: 14px;
  margin-left: 5px;
  margin-right: 5px;
  padding: 6px 12px 6px 12px;
  text-transform: uppercase;
}
.btn.oppia-navbar-button:hover,
.btn.oppia-navbar-button:focus {
  background-color: rgba(5, 190, 178, 1);
  color: rgba(255,255,255,1);
}
.btn:focus, .btn:active:focus {
  outline: 0;
}
.skipBtn {
  height: 25px;
  width: 50px;
}
.btn-secondary {
  color: #333;
  background-color: #fff;
  border-color: #ccc;
}
.btn-secondary:hover {
  color: #333;
  background-color: #e6e6e6;
  border-color: #adadad;
}
.btn-secondary.disabled, .btn-secondary:disabled {
  color: rgb(51, 51, 51);
  background-color: #fff;
  border-color: #ccc;
}
.btn-secondary:not(:disabled):not(.disabled):active,
.btn-secondary:not(:disabled):not(.disabled).active,
.show > .btn-secondary.dropdown-toggle {
  color: #333;
  background-color: #e6e6e6;
  border-color: #adadad;
}
.btn-primary {
  color: #fff;
  background-color: #337ab7;
  border-color: #2e6da4
}
.oppia-back-arrow > .btn-sm {
  padding: 1px 5px 1px 5px;
}
.btn-primary:hover {
  background-color: #286090;
  border-color: #204d74
}

/* Bootstrap override for popovers & tooltip */
.oppia-help-dropdown .uib-popover.bottom > .arrow {
  border-bottom-color: #000;
}
.oppia-help-dropdown .uib-popover.bottom > .arrow:after {
  border-bottom-color: #000;
}

.toast {
  background-color: #F89406;
  font-size: 16px;
  max-width: 550px;
}

.toast-success {
  background-color: #28a745;
}

.toast-info {
  background-color: #337ab7;
}

.tooltip {
  font-size: 12px;
}
.tooltip.bottom {
  margin-top: 3px;
  padding: 5px 0;
}
.tooltip-arrow {
  border-color: transparent;
  border-style: solid;
  height: 0;
  position: absolute;
  width: 0;
}
.tooltip.bottom .tooltip-arrow {
  border-bottom-color: #000;
  border-width: 0 5px 5px;
  left: 50%;
  margin-left: -5px;
  top: 0;
}

/* Line-height is set to 1.846 to ensure that the line-spacing inside
   a paragraph is consistent both in the editor mode while editing and
   after saving. The value 1.846 came from
   /third_party/generated/css/third_party.css.
*/

.oppia-rte-editor > p, .oppia-rte-viewer > p {
  line-height: 1.846;
}

.oppia-rte-content > div > p {
  line-height: 1.846;
}

.oppia-shadow-preview-card .oppia-rte-viewer > p {
  line-height: 1.846;
}

/* Add inter-paragraph spacing to the ng-joyride tutorial contents. */
.popover-content {
  padding: 10px;
}
.popover.ng-joyride {
  padding: 1px;
  width: 245px;
}
.popover.ng-joyride .col-md-8 {
  padding: 0;
}
.popover.ng-joyride .col-md-8 > div {
  float: left !important;
}
.pop-over-text.joyride-popover-text {
  font-size: 14px;
}
.ng-joyride .popover-content p {
  margin-top: 10px;
}

.popover-body.container-fluid {
  padding: 10px;
}
.popover-content .md-button, .md-button[disabled] {
  font-size: 13px;
}
/* The eight rules below should be in sync. */
.oppia-rte-editor > p:first-child {
  margin-top: 0;
}
.oppia-rte-editor > p:last-child {
  margin-bottom: 0;
}

.oppia-rte-viewer > p:first-child {
  margin-top: 0;
}
.oppia-rte-viewer > p:last-child {
  margin-bottom: 0;
}

.oppia-shadow-preview-card .oppia-rte-viewer > p:first-child {
  margin-top: 0;
}
.oppia-shadow-preview-card .oppia-rte-viewer > p:last-child {
  margin-bottom: 0;
}

.form-control.oppia-rte-content > div > p:first-child {
  margin-top: 0;
}
.form-control.oppia-rte-content > div > p:last-child {
  margin-bottom: 0;
}

.oppia-rte-viewer, .oppia-shadow-preview-card .oppia-rte-viewer {
  border-radius: 2px;
  display: inline-block;
  max-width: 100%;
  position: relative;
  text-align: left;
}

.oppia-prevent-selection {
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
}

.oppia-save-state-item-button {
  margin-left: 5px;
}

.oppia-editable-section {
  cursor: pointer;
  position: relative;
}

/* this classes below are used to graymask
 * outcome section when one hovers and
 * editable section when one hovers over them
 */

.oppia-editable-section .oppia-rule-preview-section-mask,
.oppia-editable-section .oppia-editable-section-mask {
  background-color: #eee;
  bottom: 0;
  height: 100%;
  opacity: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 10;
}

.oppia-editable-section:hover .oppia-rule-preview-section-mask,
.oppia-editable-section:hover .oppia-editable-section-mask {
  border-radius: 4px;
  opacity: 0.4;
  transition: all 200ms;
  -webkit-transition: all 200ms;
}

.oppia-interaction-preview {
  opacity: 0.5;
  padding: 4px;
}

.oppia-editable-section:hover .oppia-interaction-preview {
  background: rgba(5, 140, 166, 0.5);
  border-radius: 4px;
  /* The z-index value of leaflet map zoom control is 1000, to make it go lower
     in stack we have used 1001.
  */
  z-index: 1001;
}

.oppia-editor-edit-icon {
  font-size: 16px;
  opacity: 0.2;
  position: absolute;
  right: -22px;
  top: 3px;
  -webkit-transition: all 200ms;
  transition: all 200ms;
}

.oppia-editable-section:hover .oppia-editor-edit-icon {
  opacity: 0.8;
}

.oppia-click-to-start-editing {
  height: 100%;
  position: absolute;
  width: 100%;
  z-index: 50;
}

.oppia-editor-trash-icon {
  opacity: 0.2;
  -webkit-transition: all 200ms;
  transition: all 200ms;
}

.oppia-editor-trash-icon:hover {
  opacity: 0.8;
  cursor: pointer;
}

/* Styles for the state graph vizualization. */

.oppia-state-graph-container,
.oppia-translation-state-graph-container {
  border-radius: 4px;
  border: 1px solid #ccc;
  height: 400px;
  overflow-y: hidden;
  position: relative;
}

.oppia-state-graph-animate-show {
  opacity: 1;
}
/* ... */

